--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/pom.xml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/pom.xml
@@ -14,6 +14,8 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>pay-service</module>
+        <module>worker-service</module>
         <module>verification-code-service</module>
     </modules>
 
