--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/worker-service/pom.xml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/worker-service/pom.xml
@@ -12,6 +12,22 @@
     <artifactId>worker-service</artifactId>
     <name>worker-service</name>
 
+    <dependencies>
+        <!-- JWT 依赖 -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
