--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/worker-service/src/main/resources/application.properties
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/worker-service/src/main/resources/application.properties
@@ -16,16 +16,16 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #   - 配置数据源名称
 spring.datasource.name=defaultDataSource
 #   - 配置数据库连接地址
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/hospital?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://1.117.97.60:3307/h_worker?serverTimezone=UTC
 #   - 配置数据库用户名&密码：
 spring.datasource.username=root
-spring.datasource.password=1234asdf0
+spring.datasource.password=root
 
 # Redis 配置
 # Redis数据库索引（默认为0）
 spring.redis.database=0
 # Redis服务器地址
-spring.redis.host=127.0.0.1
+spring.redis.host=1.117.97.60
 # Redis服务器连接端口
 spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
