!9 完成 - 后端 - 新建 - 挂号微服务 （register-service）- 刘小雨 - #I3VUXR * 新建 - 后端 - 挂号微服务 （register-service）- 刘小雨

--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/pom.xml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/pom.xml
@@ -17,6 +17,7 @@
         <module>pay-service</module>
         <module>worker-service</module>
         <module>verification-code-service</module>
+        <module>register-service</module>
     </modules>
 
     <dependencies>
