!10 完成 - 后台 - 挂号微服务 （register-service）& 新增 - 发送手机号 => RabbitMQ - 刘小雨 - #I3VVKE * 之前不小心删除了日志配置，已还原 * 新增 - 发送手机号 => RabbitMQ - 刘小雨 * 创建了挂号微服务的Dao接口、Dao的Po对象，测试了没有问题 * 新建 - 后端 - 挂号微服务 （register-service）- 刘小雨

--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/worker-service/src/main/resources/bootstrap.yml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/worker-service/src/main/resources/bootstrap.yml
@@ -1,3 +1,4 @@
+#日志配置
 logging:
   level:
     root: WARN
@@ -9,7 +10,6 @@ logging:
       %clr(%-40.40logger{39}){cyan} \
       %clr(:){faint} \
       %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}}"
-
 spring:
   cloud:
     nacos:
