--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/verification-code-service/pom.xml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/verification-code-service/pom.xml
@@ -12,6 +12,13 @@
     <artifactId>verification-code-service</artifactId>
     <name>verification-code-service</name>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
