--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/verification-code-service/src/main/resources/application.properties
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/verification-code-service/src/main/resources/application.properties
@@ -1,4 +1,36 @@
 # 应用名称
 spring.application.name=verification-code-service
 
+#服务端口
+server.port=9002
 
+# Redis 配置
+# Redis数据库索引（默认为0）
+spring.redis.database=0
+# Redis服务器地址
+spring.redis.host=1.117.97.60
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+spring.redis.password=
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.jedis.pool.max-active=20
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.jedis.pool.max-wait=-1
+# 连接池中的最大空闲连接
+spring.redis.jedis.pool.max-idle=10
+# 连接池中的最小空闲连接
+spring.redis.jedis.pool.min-idle=0
+# 连接超时时间（毫秒）
+spring.redis.timeout=1000
+
+# 邮件服务配置
+spring.mail.host=smtp.qq.com
+# 邮箱地址
+spring.mail.username=2592590720@qq.com
+# 邮箱授权码
+spring.mail.password=evqkusxpybymdjhf
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.default-encoding=UTF-8
