!15 完成 - 后端 - 验证码微服务 - 新增 - 监听短信验证码队列 & 发送短信验证码 - 张方松 - #I3VZKW:后端 - 验证码微服务 - 新增 - 监听短信验证码队列 & 发送短信验证码 - 张方松 - #I3VZKW * - 修改了一些BUG * 后端 - 验证码微服务 - 新增 - 监听短信验证码队列 & 发送短信验证码 - 张方松

--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/verification-code-service/pom.xml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/verification-code-service/pom.xml
@@ -13,10 +13,32 @@
     <name>verification-code-service</name>
 
     <dependencies>
+        <!-- 邮箱 依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
+
+        <!-- 腾讯云SDK 依赖 -->
+        <dependency>
+            <groupId>com.tencentcloudapi</groupId>
+            <artifactId>tencentcloud-sdk-java</artifactId>
+            <!-- 注：这里只是示例版本号，请获取并替换为 最新的版本号 -->
+            <version>3.1.270</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.qcloudsms</groupId>
+            <artifactId>qcloudsms</artifactId>
+            <version>1.0.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.74</version>
+        </dependency>
+
     </dependencies>
 
     <build>
