--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/verification-code-service/src/main/resources/application.properties
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/verification-code-service/src/main/resources/application.properties
@@ -2,7 +2,18 @@
 spring.application.name=verification-code-service
 
 #服务端口
-server.port=9002
+server.port=9010
+
+# 数据库配置
+#   - 配置数据库驱动：
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#   - 配置数据源名称
+spring.datasource.name=defaultDataSource
+#   - 配置数据库连接地址
+spring.datasource.url=jdbc:mysql://1.117.97.60:3307/h_worker?serverTimezone=UTC
+#   - 配置数据库用户名&密码：
+spring.datasource.username=root
+spring.datasource.password=root
 
 # Redis 配置
 # Redis数据库索引（默认为0）
@@ -34,3 +45,18 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.default-encoding=UTF-8
+
+#配置RabbitMQ
+# rabbitmq服务器地址
+spring.rabbitmq.host=1.117.97.60
+# 配置端口
+spring.rabbitmq.port=5672
+# 配置虚拟主机
+spring.rabbitmq.virtual-host=/xiaoyu
+# rabbitmq服务器连接账号
+spring.rabbitmq.username= xiaoyu
+# rabbitmq服务器连接密码
+spring.rabbitmq.password= xiaoyu
+# 配置手动应答
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
+spring.rabbitmq.listener.direct.acknowledge-mode=manual
