--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/worker-service/src/main/resources/application.properties
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/worker-service/src/main/resources/application.properties
@@ -40,3 +40,15 @@ spring.redis.jedis.pool.max-idle=10
 spring.redis.jedis.pool.min-idle=0
 # 连接超时时间（毫秒）
 spring.redis.timeout=1000
+
+#配置RabbitMQ
+# rabbitmq服务器地址
+spring.rabbitmq.host=1.117.97.60
+# 配置端口
+spring.rabbitmq.port=5672
+# 配置虚拟主机
+spring.rabbitmq.virtual-host=/xiaoyu
+# rabbitmq服务器连接账号
+spring.rabbitmq.username= xiaoyu
+# rabbitmq服务器连接密码
+spring.rabbitmq.password= xiaoyu
