!17 完成取票的一轮流程

--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/pom.xml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/pom.xml
@@ -18,6 +18,7 @@
         <module>worker-service</module>
         <module>verification-code-service</module>
         <module>register-service</module>
+        <module>take-number-service</module>
     </modules>
 
     <dependencies>
