!19 完成 - 后端 - 员工微服务 - 新增 - 获取全部大类别信息 & 根据大类别ID获取全部科室信息 - 张方松 - #I3W0PP * 后端 - 员工微服务 - 新增 - 获取全部大类别信息 & 获取全部科室信息 - 张方松

--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/worker-service/src/main/resources/application.properties
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/worker-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=worker-service
 
 # 服务端口
-server.port=9001
+server.port=9100
 
 # MyBatis 配置
 #   - 配置Mybatis的Mapper文件
@@ -29,7 +29,7 @@ spring.redis.host=1.117.97.60
 # Redis服务器连接端口
 spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
-spring.redis.password=
+spring.redis.password=xiaoyu
 # 连接池最大连接数（使用负值表示没有限制）
 spring.redis.jedis.pool.max-active=20
 # 连接池最大阻塞等待时间（使用负值表示没有限制）
