--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/pay-service/pom.xml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/pay-service/pom.xml
@@ -13,6 +13,7 @@
     <name>pay-service</name>
 
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
