!27 完成部分药品管理 * 完成部分药品管理功能

--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/pom.xml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/pom.xml
@@ -19,6 +19,7 @@
         <module>verification-code-service</module>
         <module>register-service</module>
         <module>take-number-service</module>
+        <module>drug-service</module>
     </modules>
 
     <dependencies>
