!29 完成 - 前端 - 前台Vue（vue-frontstage)项目 - 添加->register路由的 - 科目 - & - 科目类型 - 内容回显 - 刘小雨 * Merge remote-tracking branch 'origin/#I3VV4M' into #I3VV4M * 后端 - 挂号微服务 - 新增 - SQL 表到 resources 目录 - 刘小雨 * 前端 - 前台Vue（vue-frontstage)项目 - 添加->register路由的 - 科目 - & - 科目类型 - 内容回显 - 刘小雨 * 继续提交 * #I3VV4M: * 前端 - 前台Vue（vue-frontstage)项目 - 添加->register路由的 - 科目 - & - 科目类型 - 内容回显 - 刘小雨 * 继续提交 * #I3VV4M:

--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/register-service/src/main/resources/application.yml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/register-service/src/main/resources/application.yml
@@ -50,7 +50,7 @@ spring:
         # 连接池中的最小空闲连接
         min-idle: 0
     # Redis服务器连接密码（默认为空）
-    password: ''
+    password: 'xiaoyu'
     # Redis服务器连接端口
     port: 6379
     # 连接超时时间（毫秒）
@@ -62,7 +62,7 @@ spring:
       discovery:
         namespace: public
         password: nacos
-        server-addr: 192.172.0.160:8848
+        server-addr: 1.117.97.60:8848
         username: nacos
         group: group3
 
