--- a/cloud-hospital-parent/pom.xml
+++ b/cloud-hospital-parent/pom.xml
@@ -20,7 +20,7 @@
 
     <modules>
         <module>cloud-hospital-nacos-parent</module>
-
+        <module>cloud-hospital-gateway-server</module>
     </modules>
 
     <dependencies>
@@ -84,6 +84,7 @@
     </dependencyManagement>
 
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
