!44 完成 - 前端 - 后台Vue - 新建 - 排班Vue & - 新增 - 排班功能JS - （一） - 张方松 - #I3WBLX * 前端 - 后台Vue - 新建 - 排班Vue & - 新增 - 排班功能JS - （一） -  张方松 * 前端 - 后台Vue - 完善 - 完善现有模块细节（登录/主页/修改密码） - 张方松 * - 整合了分支 #I3W9MM ， 解决冲突 * 前端 - 后台Vue - 新增 - 找回密码Vue & 找回密码JS - 张方松 * 前端 - 后台Vue - 访问首页（home.vue）获得员工信息 - 张方松 * - 增加了功能 * - 新增了一些功能 * - 解决了 Gateway 不允许自定义请求头

--- a/cloud-hospital-parent/cloud-hospital-gateway-server/src/main/resources/bootstrap.yml
+++ b/cloud-hospital-parent/cloud-hospital-gateway-server/src/main/resources/bootstrap.yml
@@ -34,9 +34,9 @@ spring:
             # 跨域允许的有效期
             allow-credentials: true
             allowed-origins: '*'
-            allowed-headers: Content-Type,Content-Length, Authorization, Accept,X-Requested-With
+            allowed-headers: Content-Type,Content-Length, Authorization, Accept,X-Requested-With, BackLoginedToken
             allowed-methods: '*'
-            exposed-headers: Content-Type,Content-Length, Authorization, Accept,X-Requested-With
+            exposed-headers: Content-Type,Content-Length, Authorization, Accept,X-Requested-With, BackLoginedToken
             max-age: 3600
       default-filters:
         - DedupeResponseHeader=Vary Access-Control-Allow-Credentials Access-Control-Allow-Origin, RETAIN_UNIQUE
