--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/verification-code-service/src/main/resources/application.properties
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/verification-code-service/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.redis.host=1.117.97.60
 # Redis服务器连接端口
 spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
-spring.redis.password=
+spring.redis.password=xiaoyu
 # 连接池最大连接数（使用负值表示没有限制）
 spring.redis.jedis.pool.max-active=20
 # 连接池最大阻塞等待时间（使用负值表示没有限制）
