--- a/vue-backstage/package.json
+++ b/vue-backstage/package.json
@@ -14,7 +14,8 @@
     "element-ui": "^2.15.2",
     "vue": "^2.5.2",
     "vue-monoplasty-slide-verify": "^1.1.3",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-simple-verify": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
