!48 发送消息给叫号微服务 * 分别从另外两个微服务获得排班id和医生id然后发送消息给叫号微服务 * 继续提交

--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/take-number-service/src/main/resources/application.yml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/take-number-service/src/main/resources/application.yml
@@ -30,3 +30,31 @@ spring:
   application:
     # 应用名称
     name: take-number-service
+
+  rabbitmq:
+    host: 1.117.97.60
+    password: xiaoyu
+    port: 5672
+    username: xiaoyu
+    virtual-host: /xiaoyu
+  redis:
+    database: 0
+    host: 1.117.97.60
+    jedis:
+      pool:
+        max-active: 20
+        max-idle: 10
+        max-wait: -1
+        min-idle: 0
+    password: xiaoyu
+    port: 6379
+    timeout: 1000
+
+
+
+
+
+
+
+
+
