--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/register-service/src/main/resources/bootstrap.yml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/register-service/src/main/resources/bootstrap.yml
@@ -2,6 +2,7 @@ spring:
   profiles:
     active: dev
 
+#日志配置
 logging:
   level:
     root: WARN
@@ -13,4 +14,3 @@ logging:
       %clr(%-40.40logger{39}){cyan} \
       %clr(:){faint} \
       %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}}"
-
