--- a/cloud-hospital-parent/cloud-hospital-gateway-server/src/main/resources/bootstrap.yml
+++ b/cloud-hospital-parent/cloud-hospital-gateway-server/src/main/resources/bootstrap.yml
@@ -23,6 +23,7 @@ spring:
         server-addr: 1.117.97.60:8848
         username: nacos
         group: group3
+    # 如遇到跨域问题,将以下所有注释,重新启动网关微服务,再接触注释,再重新启动网关微服务即可,具体原因不明
     gateway:
       globalcors:
         cors-configurations:
