--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/verification-code-service/src/main/resources/bootstrap.yml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/verification-code-service/src/main/resources/bootstrap.yml
@@ -1,7 +1,12 @@
 spring:
-  profiles:
-    active: dev
-
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 192.172.0.163:8848
+        namespace: public
+        password: nacos
+        username: nacos
+#日志配置
 logging:
   level:
     root: WARN
