--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/pom.xml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/pom.xml
@@ -20,6 +20,7 @@
         <module>register-service</module>
         <module>take-number-service</module>
         <module>drug-service</module>
+        <module>physical-exam-service</module>
     </modules>
 
     <dependencies>
