--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/worker-service/src/main/resources/application-dev.yml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/worker-service/src/main/resources/application-dev.yml
@@ -1,4 +1,14 @@
 spring:
+  application:
+    name: worker-service
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+        namespace: public
+        username: nacos
+        password: nacos
+        group: group3
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     name: defaultDataSource
