--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/pay-service/pom.xml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/pay-service/pom.xml
@@ -11,6 +11,18 @@
 
     <artifactId>pay-service</artifactId>
     <name>pay-service</name>
+    
+    <dependencies>
+        
+        <!--沙箱支付依赖-->
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>3.3.49.ALL</version>
+        </dependency>
+        
+        
+    </dependencies>
 
     <build>
         <finalName>${project.artifactId}</finalName>
