!71 完成 - 后端 - 体检中心微服务 - 新增 - 根据体检记录编号（no）查询体检记录详情 - 张方松 - #I3XDYT * Swagger&Knife4J 配置 * - 解决冲突

--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/pom.xml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/pom.xml
@@ -24,22 +24,28 @@
     </modules>
 
     <dependencies>
+<!--         Knief4J 依赖-->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <version>3.0.2</version>
+        </dependency>
         <!-- RabbitMQ 坐标 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
-        <!-- Swagger 坐标 -->
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>2.9.2</version>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.9.2</version>
-        </dependency>
+<!--        &lt;!&ndash; Swagger 坐标 &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>io.springfox</groupId>-->
+<!--            <artifactId>springfox-swagger2</artifactId>-->
+<!--            <version>2.9.2</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>io.springfox</groupId>-->
+<!--            <artifactId>springfox-swagger-ui</artifactId>-->
+<!--            <version>2.9.2</version>-->
+<!--        </dependency>-->
         <!-- Validation 坐标 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
