!73 新增网关配置和数据库代码 * 新增网关，数据库代码 * 初步搭建支付微服务 * 继续提交

--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/take-number-service/src/main/resources/application-dev.yml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/take-number-service/src/main/resources/application-dev.yml
@@ -1,4 +1,12 @@
 spring:
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+        namespace: public
+        username: nacos
+        password: nacos
+        group: group3
   datasource:
     #   - 配置数据库驱动：
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -31,6 +39,14 @@ spring:
     password: xiaoyu
     port: 6379
     timeout: 1000
+
+#  cloud:
+#    nacos:
+#      discovery:
+#        server-addr: 127.0.0.1:8848
+#        namespace: public
+#        password: nacos
+#        username: nacos
 
 
 
