--- a/cloud-hospital-parent/cloud-hospital-gateway-server/src/main/resources/application-dev.yml
+++ b/cloud-hospital-parent/cloud-hospital-gateway-server/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: http://1.117.97.60:8848
+        server-addr: 127.0.0.1:8848
         namespace: public
         username: nacos
         password: nacos
