--- a/cloud-hospital-parent/cloud-hospital-gateway-server/src/main/resources/application-pro.yml
+++ b/cloud-hospital-parent/cloud-hospital-gateway-server/src/main/resources/application-pro.yml
@@ -2,7 +2,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: http://192.172.0.163:8848
+        server-addr: 192.172.0.163:8848
         namespace: public
         username: nacos
         password: nacos
