--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/take-number-service/src/main/resources/application.yml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/take-number-service/src/main/resources/application.yml
@@ -12,7 +12,11 @@ mybatis:
   type-aliases-package: com.example.takenumberservice.outlet.dao.mysql.pojo
 
 
-
+feign:
+  client:
+    config:
+      default:
+        read-timeout: 5000
 
 
 
