--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/pay-service/pom.xml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/pay-service/pom.xml
@@ -12,6 +12,14 @@
     <artifactId>pay-service</artifactId>
     <name>pay-service</name>
     
+    <properties>
+        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
+        <spring-cloud.version>Hoxton.SR9</spring-cloud.version>
+    </properties>
+    
     <dependencies>
         
         <!--沙箱支付依赖-->
@@ -20,8 +28,21 @@
             <artifactId>alipay-sdk-java</artifactId>
             <version>3.3.49.ALL</version>
         </dependency>
-        
-        
+    
+        <!--druid数据源-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.10</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.74</version>
+            <scope>compile</scope>
+        </dependency>
+
+
     </dependencies>
 
     <build>
