--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/take-number-service/pom.xml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/take-number-service/pom.xml
@@ -22,6 +22,13 @@
     </properties>
     
     <dependencies>
+    
+        <!--沙箱支付依赖-->
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>3.3.49.ALL</version>
+        </dependency>
 
         <!--druid数据源-->
         <dependency>
