!86 已完成一轮支付流程

--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/pay-service/pom.xml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/pay-service/pom.xml
@@ -21,6 +21,12 @@
     </properties>
     
     <dependencies>
+    
+        <!--thymeleaf启动器-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
         
         <!--沙箱支付依赖-->
         <dependency>
