--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/pay-service/src/main/resources/application-dev.yml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/pay-service/src/main/resources/application-dev.yml
@@ -12,7 +12,7 @@ spring:
     password: root
     username: root
     #   - 配置数据库连接地址
-    url: jdbc:mysql://1.117.97.60:3307/h_takenumber?serverTimezone=UTC
+    url: jdbc:mysql://1.117.97.60:3307/h_pay?serverTimezone=UTC
   cloud:
     nacos:
       discovery:
@@ -20,3 +20,7 @@ spring:
         namespace: public
         password: nacos
         username: nacos
+# MyBatis 配置
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: com.example.payservice.outlet.dao.mysql.callproofdao.pojo
