!88 后台 - 挂号微服务 （register-service）& 新增 RabbitMQ 的最终一致性分布式事务 - 刘小雨 * 修改了pom * 完成了消息的一致性 * 添加了消息表 * 添加往news_exchange路由发送消息 * 删除了两个client接口，添加了根据id查询患者信息的分布式一致性事务 * 修改了client的服务名

--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/register-service/src/main/resources/application-dev.yml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/register-service/src/main/resources/application-dev.yml
@@ -21,6 +21,13 @@ spring:
     username: xiaoyu
     # rabbitmq服务器连接密码
     password: xiaoyu
+    #开启『发送者确认』
+    publisher-confirm-type: CORRELATED
+    #在需要使用消息的return机制时候，此参数必须设置为true
+    template:
+      mandatory: true
+    #开启消息的return机制
+    publisher-returns: true
   # Redis 配置
   redis:
     # Redis数据库索引（默认为0）
