--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/physical-exam-service/src/main/resources/application-dev.yml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/physical-exam-service/src/main/resources/application-dev.yml
@@ -27,13 +27,13 @@ spring:
     virtual-host: /xiaoyu
   redis:
     database: 0
-    host: 1.117.97.60
+    host: 127.0.0.1
     jedis:
       pool:
-        max-active: 20
-        max-idle: 10
+        max-active: 5000
         max-wait: -1
-        min-idle: 0
-    password: xiaoyu
+        min-idle: 1
+        max-idle: 100
+    password:
     port: 6379
     timeout: 1000
