--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/worker-service/src/main/resources/application-pro.yml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/worker-service/src/main/resources/application-pro.yml
@@ -20,4 +20,9 @@ spring:
     port: 5672
     username: guest
     password: guest
-
+    publisher-confirm-type: correlated
+    listener:
+      direct:
+        acknowledge-mode: manual
+      simple:
+        acknowledge-mode: manual
