!95 完成药房支付和退款，挂号取票的消息一致性

--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/take-number-service/src/main/resources/application-dev.yml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/take-number-service/src/main/resources/application-dev.yml
@@ -27,6 +27,7 @@ spring:
     port: 5672
     username: xiaoyu
     virtual-host: /xiaoyu
+    publisher-confirm-type: CORRELATED
   redis:
     database: 0
     host: 1.117.97.60
