--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/pay-service/src/main/resources/application-dev.yml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/pay-service/src/main/resources/application-dev.yml
@@ -23,4 +23,4 @@ spring:
 # MyBatis 配置
 mybatis:
   mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.example.payservice.outlet.dao.mysql.callproofdao.pojo
+  type-aliases-package: com.example.payservice.outlet.dao.mysql.pojo
