--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/take-number-service/pom.xml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/take-number-service/pom.xml
@@ -36,6 +36,18 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.10</version>
         </dependency>
+    
+<!--        <dependency>-->
+<!--            <groupId>com.baomidou</groupId>-->
+<!--            <artifactId>mybatis-plus-boot-starter</artifactId>-->
+<!--            <version>3.3.2</version>-->
+<!--        </dependency>-->
+    
+        <dependency>
+            <groupId>eu.ocathain.com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.5.2</version>
+        </dependency>
         
 
 
