--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/take-number-service/src/main/resources/application-pro.yml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/take-number-service/src/main/resources/application-pro.yml
@@ -21,4 +21,6 @@ spring:
     port: 5672
     username: guest
     password: guest
+    # 确认消息已发送到交换机（Exchange）
+    publisher-confirm-type: CORRELATED
 
