--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/physical-exam-service/pom.xml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/physical-exam-service/pom.xml
@@ -13,6 +13,21 @@
     <name>physical-exam-service</name>
     <description>Demo project for Spring Boot</description>
 
+    <dependencies>
+        <!-- JWT 依赖 -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
