--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/physical-exam-service/src/main/resources/application-dev.yml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/physical-exam-service/src/main/resources/application-dev.yml
@@ -25,15 +25,21 @@ spring:
     port: 5672
     username: xiaoyu
     virtual-host: /xiaoyu
+    publisher-confirm-type: correlated
+    listener:
+      direct:
+        acknowledge-mode: manual
+      simple:
+        acknowledge-mode: manual
   redis:
     database: 0
-    host: 127.0.0.1
+    host: 1.117.97.60
     jedis:
       pool:
         max-active: 5000
         max-wait: -1
         min-idle: 1
         max-idle: 100
-    password:
+    password: xiaoyu
     port: 6379
     timeout: 1000
